# InterpreterFull

./: #main.cpp#  1.txt  111.txt  CMakeLists.txt  Inter  InterDebug  LexAnalizer.cbp  LexAnalizer.depend  LexAnalizer.layout  README.md  Visitor.h  test.txt
CmdHistoryManager/: CMakeLists.txt  CmdHistoryManager.cpp  CmdHistoryManager.h  Makefile  cmake_install.cmake
Evaluator/: CMakeLists.txt  Makefile  cmake_install.cmake  evaluator.cpp  evaluator.h
Interpeter/: Interpreter.cpp
Interpreter/: CMakeLists.txt  Interpreter.h  Makefile  cmake_install.cmake
LexAnalizer/: Additional.cpp  Additional.h  CMakeLists.txt  LexAnalizer.cpp  LexAnalizer.h  Makefile  State.h  cmake_install.cmake
MemoryManager/: CMakeLists.txt  Makefile  cmake_install.cmake  memoryManager.cpp  memoryManager.h
Syntax/: CMakeLists.txt  Makefile  STNode.cpp  STNode.h  STNodeData.h  SyntaxAnalizer.cpp  SyntaxAnalizer.h  argcNode.cpp  cmake_install.cmake  echoNode.cpp  envpNode.cpp  helpNode.cpp  runNode.cpp  stringNode.cpp
Syntax/Nodes/: STNode.cpp  STNode.h  STNodeData.h  argcNode.cpp  argvNode.cpp  cmdNode.cpp  echoNode.cpp  envpNode.cpp  equalSignNode.cpp  fullCmdNode.cpp  helpNode.cpp  quitNode.cpp  rawNode.cpp  runNode.cpp  stringNode.cpp  varSubstitutionNode.cpp  varsNode.cpp
Syntax/Printer/: Printer.cpp  Printer.h
Visitor/: CMakeLists.txt  Makefile  Visitor.h  cmake_install.cmake
cbuild/: CMakeCache.txt  Interp  Makefile  cmake_install.cmake
cbuild/CmdHistoryManager/: Makefile  (+1 more)
include/: Additional.h  LexAnalizer.h
src/: Additional.cpp  LexAnalizer.cpp  State.cpp  main.cpp
(+12 files in other folders)
